dark mode fixes :night_with_stars:

--- a/src/App.css
+++ b/src/App.css
@@ -46,15 +46,25 @@ body.dark-mode {
 }
 
 .toggle-dark-mode {
-  background-color: #000;
-  color: #fff;
+  background: none;
   border: none;
+  padding: 0;
+  cursor: pointer;
+  font-size: 1.5rem;
+  outline: none;
 }
 
 .toggle-dark-mode.dark {
-  background-color: #fff;
-  color: #000;
-  border: none;
+  color: var(--text-color-dark);
+}
+
+.toggle-dark-mode:hover,
+.toggle-dark-mode:focus,
+.toggle-dark-mode:active {
+  background: none !important;
+  box-shadow: none !important;
+  border: none !important;
+  outline: none !important;
 }
 
 .navbar {
